--- a/content/app.css
+++ b/content/app.css
@@ -32,7 +32,7 @@
 {
     padding: 2rem 1rem;
     margin-bottom: 2rem;
-    background-color: lightgrey;
+    background-color: white;
     border-radius: .3rem;
 }
 
